# wl_iot_framework

./: .gitignore  ArduinoRpc.qbs  Doxyfile  README
ARpcQtDesktop/: ARpc.qbs
ArduinoIdeLibrary/: install_on_linux.sh
ArduinoRpcLib/: ARpcConfig.cpp  ARpcConfig.h  ARpcDevice.cpp  ARpcDevice.h  ARpcMessage.cpp  ARpcMessage.h  ARpcMessageParser.h  ARpcStreamParser.cpp  ARpcStreamParser.h  ARpcSyncCall.cpp  ARpcSyncCall.h  ARpcSyncUnsafeCall.cpp  ARpcSyncUnsafeCall.h  ARpcTcpDevice.cpp  ARpcTcpDevice.h  ARpcTtyDevice.cpp  ARpcTtyDevice.h  ArduinoRpcLib.qbs
ArduinoRpcQtDesktop/: ArduinoRpc.qbs
ArduinoRpcQtLibrary/: ArduinoRpc.qbs
ArduinoRpcTest/: ARpcComplexTests.cpp  ARpcComplexTests.h  ARpcControlsParsingTests.cpp  ARpcMessageParserTests.cpp  ARpcMessageParserTests.h  ARpcMessageTests.cpp  ARpcMessageTests.h  ARpcSensorsParsingTests.cpp  ARpcSimpleAPITests.cpp  ARpcSimpleAPITests.h  ARpcStreamParserTests.cpp  ARpcStreamParserTests.h  ARpcTtyWatcherTests.cpp  ARpcTtyWatcherTests.h  ArduinoRpcTest.qbs  FakeDevice.h  main.cpp
ArduinoRpcUiGen/: ElementSettingsWidget.cpp  ElementSettingsWidget.h  MainWindow.cpp  MainWindow.h
ArduinoRpcUiLib/: ARpcControlUi.cpp  ARpcControlUi.h  ARpcControlUiCommand.cpp  ARpcControlUiCommand.h  ARpcControlUiGroup.cpp  ARpcControlUiGroup.h  ARpcParamCheckbox.h  ARpcParamDial.h  ARpcParamNull.h  ARpcParamSelect.h  ARpcParamSlider.h  ARpcParamTextEdit.h  ArduinoRpcUiLib.qbs
HubRS485/: HubRS485.ino
HubRS485_Leonardo/: HubRS485_Leonardo.ino
HubRS485_Mega/: HubRS485_Mega.ino
HubRS485_test/: HubRS485_test.ino
IotProxyServer/: IotProxyServer.qbs  example_data_processing_script.js  example_virtual_device.js  wliotproxy_bash_completion  wliotproxy_bash_completion.sh  wliotproxy_bash_completion.test.sh
LedBlinkTest/: LedBlinkTest.ino  LedBlinkTest.ino.leonardo.hex  LedBlinkTest.ino.with_bootloader.leonardo.hex
LinuxLibrary/: CMakeLists.txt  Device.h
SensorsTestSketch/: SensorsTestSketch.ino  controls.xml
SensorsTestSketchEsp8266/: SensorsTestSketchEsp8266.ino
TestBus1/: TestBus1.ino
TestBus2/: TestBus2.ino
TestDeviceWithUi/: TestDeviceWithUi.qbs
TestSerial/: TestSerial.ino
TestSketch/: TestSketch.ino
WLIOTAndroidApplication/: settings.gradle
docs/: .~lock.Описание протокола взаимодействия между устройствами bus.odt#  .~lock.Описание протокола взаимодействия между устройствами ptp.odt#  .~lock.Описание протокола взаимодействия с IoT сервером.odt#  .~lock.Описание протокола взаимодействия с устройством.odt#  2019.01.15 ТЗ на права доступа 0.1.odt  2019.01.15 ТЗ на права доступа 0.2.odt  2019.01.15 ТЗ на права доступа.odt  IoT архитектура.dia  IoT архитектура.epgz  OpenSSL сертификат по-быстрому.txt  TODO  base64.c  base64.h  controls.json-schema  controls.xsd  controls_simplified.json-schema  controls_simplified.xsd  sensors.json-schema  sensors.xsd  sensors_simplified.json-schema  sensors_simplified.xsd  test_command_with_params.xml  test_controls.xml  (+22 more)
libwliotproxy-simple/: .gitignore  CMakeLists.txt
libwliotproxy-simple-example/: CMakeLists.txt
libwliotproxy-simple-example/test/: Model.cpp  Model.h  main.cpp
libwliotproxy-simple/include/wliot/simple/: ClientSocket.h  Device.h  DeviceState.h  IConnectionCallback.h  IDevEventsCallback.h  IMessageCallback.h  IWriteCallback.h  RealDeviceMessageDispatch.h  SrvReady.h  StreamParser.h  StreamWriter.h  Uuid.h
libwliotproxy-simple/src/: ClientSocket.cpp  Device.cpp  DeviceState.cpp  IDevEventsCallback.cpp  IMessageCallback.cpp  IWriteCallback.cpp  RealDeviceMessageDispatch.cpp  SrvReady.cpp  StreamParser.cpp  StreamWriter.cpp  Uuid.cpp
libwliotproxy-simple/test/: Model.cpp  Model.h  main.cpp
(+2604 files in other folders)
